# cobrawap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .zenodo.json  .zenodos.json  ACKNOWLEDGEMENTS  ACKNOWLEDGEMENTS.rst  ACKNOWLEDGMENTS  AUTHORS  AUTHORS.rst  Ephys_sandbox.ipynb  README.md  README.rst  RelatedRepositories.rst  ToBeFixed.rtf  VERSION  Wavescalephant Test.ipynb  codemeta.json  pyproject.toml  readthedocs.yaml  setup.py  tox.ini
.github/workflows/: black.yml  ebrains.yml  publish-to-pypi-and-testpypi.yml
cobrawap/: __init__.py  __main__.py  cmd_utils.py
cobrawap/pipeline/: README.rst  Snakefile  settings_template.py
doc/: index.html
doc/source/: acknowledgments.rst  authors.rst  citation.rst  command_line_interface.rst  conf.py  index.rst  pipeline.rst  pipeline_stages.rst  release_notes.rst  stage01_data_entry.rst  stage02_processing.rst  stage03_trigger_detection.rst  stage04_wave_detection.rst  stage05_channel-wave_characterization.rst  stage05_channel_wave_characterization.rst  stage05_wave_characterization.rst  (+1 more)
pipeline/: README.md  README.rst  Snakefile  config.yaml  config_template.yaml  environment.yaml  requirements.txt  settings.py  settings_template.py  utils.py
requirements/: environment-docs.yaml  requirements-docs.txt
showcase_notebooks/: 2dFourier_sandbox.ipynb  DPSNN_NEST.ipynb  Ephys_sandbox.ipynb  Guide_Block.md  Guide_Stage.md  Untitled.ipynb  collab_snakemake_test.ipynb  comparing_planar_velocities.ipynb  critical_point.ipynb  horn_schunck.ipynb  run_snakemake_in _collab.ipynb  run_snakemake_in_collab.ipynb  velocity_vector_field.ipynb  wave_clustering.ipynb
snakemake_workflow/: Snakefile  configfile.yaml  settings.py  temp.py
wavesnakephant/: Snakefile  configfile.yaml  metadata.py  settings.py
(+4303 files in other folders)
